# simple-backend

./: .env  contacts.json  main.py  pyproject.toml  requirements.txt
