[project]
name = "simple-backend"
version = "0.1.0"
description = "A simple FastAPI backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "email-validator>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uvicorn]
app = "main:app"
host = "0.0.0.0"
port = 8000
